# MongoFastAPI

./: .gitignore  .pylintrc  Dockerfile  README.md  app.py  environment.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  sonar-project.properties  tox.ini
alembic/: env.py
alembic/versions/: dd80949f80a8_init_db.py
app/controllers/: routers.py
app/controllers/crud/: base.py
app/controllers/student/: common.py  router.py
app/controllers/student_repository/: common.py  router.py
app/schemas/: student.py
app/utils/: optional.py
src/controllers/: __init__.py  routers.py
src/controllers/base_repository/: interface.py
src/controllers/student/: common.py  router.py
src/controllers/student_repository/: common.py  router.py
src/mongo_api/controllers/: __init__.py  routers.py
src/mongo_api/controllers/student/: common.py  router.py
src/mongo_api/schemas/: student.py
src/mongo_api/utils/: http_status.py
src/schemas/: student.py
src/utils/: client.py  optional.py
tests/: test_student.py
