[tool.poetry]
name = "MongoDB-FastAPI"
version = "0.1.0"
description = ""
authors = ["Huynh Ngoc Phien <hnphien12345@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
annotated-types = "0.6.0"
anyio = "3.7.1"
click = "8.1.7"
dnspython = "2.4.2"
email-validator = "2.1.0.post1"
fastapi = "0.110.0"
h11 = "0.14.0"
idna = "3.4"
motor = "3.3.1"
pydantic = "2.6.3"
pydantic-core = "2.16.3"
pymongo = "4.5.0"
sniffio = "1.3.0"
starlette = "0.36.3"
typing-extensions = "4.8.0"

[tool.poetry.group.dev.dependencies]
annotated-types = "0.6.0"
anyio = "3.7.1"
click = "8.1.7"
dnspython = "2.4.2"
email-validator = "2.1.0.post1"
fastapi = "0.110.0"
h11 = "0.14.0"
idna = "3.4"
motor = "3.3.1"
pydantic = "2.6.3"
pydantic-core = "2.16.3"
pymongo = "4.5.0"
sniffio = "1.3.0"
starlette = "0.36.3"
typing-extensions = "4.8.0"
pip = "^24.0"
setuptools = "^69.5.1"
wheel = "^0.43.0"
ipython = "8.7.0"
ipykernel = "6.19.2"
pathlib = "1.0.1"
poetry = "1.1.7"
pytest = "7.1.2"
pytest-cov = "3.0.0"
pytest-xdist = "2.5.0"
pytest-timeout = "1.4.2"
pytest-benchmark = "3.4.1"
tox = "3.28.0"
psutil = "5.9.0"
argparse = "1.4.0"
configparser = "5.0.2"
debugpy = "1.5.1"
pylint = "2.15.5"
pylint-json2html = "0.4.0"
flake8 = "6.0.0"
flake8-bugbear = "23.1.17"
flake8-comprehensions = "3.10.1"
mypy = "0.981"
mypy-extensions = "0.4.3"
autoflake = "2.1.1"
isort = "5.10.1"
black = "22.6.0"
pep8 = "1.7.1"
autopep8 = "1.6.0"
pre-commit = "2.20.0"
git-lfs = "1.6"
sphinx = "5.0.2"
sphinxcontrib-confluencebuilder = "2.0.0"
mkdocs = "1.4.2"
mkdocstrings = "0.19.1"
mkdocs-material = "9.0.5"
pygments = "2.14.0"
atlassian-python-api = "3.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"