[metadata]
name = MongoDB-FastAPI
version = 0.1.0
description =
long_description = file: README.md
long_description_content_type = text/markdown
author =
responsible_autor =
license = BIOSL v4
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    License :: OSI Approved
    Programming Language :: Python :: 3.10
    Topic :: Software Development
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: Unix
    Operating System :: MacOS

[options]
install_requires =
    annotated-types==0.6.0
    anyio==3.7.1
    click==8.1.7
    dnspython==2.4.2
    email-validator==2.1.0.post1
    fastapi==0.110.0
    h11==0.14.0
    idna==3.4
    motor==3.3.1
    pydantic==2.6.3
    pydantic-core==2.16.3
    pymongo==4.5.0
    sniffio==1.3.0
    starlette==0.36.3
    typing-extensions==4.8.0

# [isort]
# # USE it with ``isort --recursive .`` in the terminal
# profile = black
# #lines_before_imports = 2
# sections =
#     FUTURE,
#     STDLIB,
#     THIRDPARTY,
#     FIRSTPARTY,
#     LOCALFOLDER
# default_section = LOCALFOLDER
# known_third_party =
#     numpy,
#     pandas,
#     keras,
#     tensorflow,
#     sklearn,
#     matplotlib,
#     scipy
# known_first_party =
#     dtypes,
#     vector
# multi_line_output = 3
# lines_after_imports = 2
# import_heading_stdlib=Standard Library
# import_heading_firstparty=My Stuff
# force_single_line = True
# use_parentheses = True
# ensure_newline_before_comments = True
# line_length = 120
# length_sort = true
# verbose = true


[flake8]
exclude = .git,__pycache__,docs,old,build,dist
max-complexity = 30
max-line-length = 120
ignore=W504,F401,E402,E266,E203,W503,C408,C416,B001


[mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
follow_imports = silent
check_untyped_defs = false
disallow_incomplete_defs = true
disallow_untyped_defs = false
disallow_subclassing_any = false
strict_optional = false
no_implicit_optional = false
warn_no_return = true
warn_unreachable = true
